--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body>
         <div class="main-wrapper home-two">
             <div id="home-banner">
-                <img style="position:absolute; z-index:0; top:0; right:0; margin-right:170px; margin-top:90px;" src = "ug.png" width= 360px>
+                <img class="cover" src = "ug.png" width= 360px>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-9">
