Updated Medium Profile

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                                         <li><h5>Fiverr </h5> <span>:</span><a href="https://www.fiverr.com/sandipsavaliya" target="blank">https://www.fiverr.com/sandipsavaliya</a></li> 
                                         <li><h5>GitHub </h5> <span>:</span><a href="https://github.com/blackbeared">https://github.com/blackbeared</a></li> 
                                         <li><h5>Stack-Overflow </h5> <span>:</span><a href="https://stackoverflow.com/users/8144663/sandip-savaliya">https://stackoverflow.com/users/8144663/sandip-savaliya</a></li> 
-                                        <li><h5>LinkedIn </h5> <span>:</span><a href="https://www.linkedin.com/in/er-sandip-savaliya/">https://www.linkedin.com/in/er-sandip-savaliya/</a></li> 
+                                        <li><h5>LinkedIn </h5> <span>:</span><a href="https://www.linkedin.com/in/er-sandip-savaliya/">https://www.linkedin.com/in/er-sandip-savaliya/</a></li>
+                                        <li><h5>Medium </h5> <span>:</span><a href="https://medium.com/@sandipsavaliya">https://medium.com/@sandipsavaliya</a></li>
                                     </ul>
                                 </div>
                                     <hr>
@@ -285,7 +286,7 @@
                                                 </tr>
                                                 <tr>
                                                         <td>
-                                                                <h5>May 2019 - Present (2 Months)</h5>
+                                                                <h5>May 2019 - Present (7 Months)</h5>
                                                         </td>
                                                     </tr>
                                                 <tr>
