--- a/index.html
+++ b/index.html
@@ -178,6 +178,15 @@
                                 </div>
                                 <div class="progress-content">
                                     <div class="rating-bar bar-left">
+                                        <label>MEAN</label>
+                                        <span class="rating-count pull-right">70%</span>
+                                        <div class="skill-progress">
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                                </div>
+                                            </div>
+                                        </div>
+                                                
                                         <label>Android</label>
                                         <span class="rating-count pull-right">90%</span>
                                         <div class="skill-progress">
@@ -270,10 +279,43 @@
                         </div>
                         <div class="col-sm-8">
                             <div class="text-info">
-                                <h4>Over 3 Years</h4>
+                                <h4>Over 5 Years</h4>
                                 <p>I have an experience in Developing, Maintaining and Managing projects as well as Training or Guiding Subordinates & Improving their skills to meet technology standards.</p>
                             </div>
-                            
+                            <div class="exprience">
+                                <div class="exprience-image">
+                                <img style="padding-left:30px; padding-top:20px;" class="img-responsive" src="nestcode.png" alt="Image">
+                                </div>
+                                <table class="exprience-info">
+                                        <tr>
+                                                <td>
+                                                        <h3>Chief Technical Officer</h3>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                    <td>
+                                                            <h5>May 2020 - Current</h5>
+                                                    </td>
+                                                </tr>
+                                            <tr>
+                                                <td>
+                                                        • Passionate about developing high-performing teams and using transformational leadership to accelerate business capabilities and optimize IT value. Recognized for
+creating impactful relationships, strategic sourcing, consensus building, and leading full-cycle global projects to enhance the portfolio of enterprise applications.
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                        • Expert in advanced development methodologies, tools and processes contributing to the design and rollout of cutting-edge software applications.
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                        • Known for excellent troubleshooting skills – able to analyze code and engineer well-researched, cost-effective and responsive solutions.
+                                                </td>
+                                            </tr>
+                                </table>                            
+                            </div>
+                            <hr>
                             <div class="exprience">
                                     <div class="exprience-image">
                                     <img style="padding-left:30px; padding-top:20px;" class="img-responsive" src="coruscate.png" alt="Image">
@@ -286,14 +328,9 @@
                                                 </tr>
                                                 <tr>
                                                         <td>
-                                                                <h5>May 2019 - Present (7 Months)</h5>
+                                                                <h5>May 2019 - May 2020</h5>
                                                         </td>
                                                     </tr>
-                                                <tr>
-                                                    <td>
-                                                            • Develop Project Architectures.
-                                                    </td>
-                                                </tr>
                                                 <tr>
                                                     <td>
                                                             • Manage Android + iOS Projects as well as Delivery.
@@ -301,19 +338,35 @@
                                                 </tr>
                                                 <tr>
                                                     <td>
-                                                            • Organize Training Events within the organization to stay team updated with latest technology trends.
+                                                            • Equipped with the knowledge of object-oriented analysis and design, sound skills of creating new software & systems, designing, analysis, testing, database development &
+coding for modules as per the customer’s requirements.
+                                                    </td>
+                                                </tr>
+                                                 <tr>
+                                                    <td>
+                                                            • Proven ability to plan and manage the operational process for maximum efficiency and productivity.
+                                                    </td>
+                                                </tr>
+                                                 <tr>
+                                                    <td>
+                                                            • Ability to streamline and implement new structures and roles that create speed, efficiency, and support rapidly shifting business demands.
+                                                    </td>
+                                                </tr>
+                                                 <tr>
+                                                    <td>
+                                                            • Strong working knowledge of industry regulations and legislative guidelines.
                                                     </td>
                                                 </tr>
                                                 <tr><td>&nbsp;</td></tr>
 
                                                 <tr>
                                                         <td>
-                                                                <h3>Sr. Android Programmer Analyst</h3>
+                                                                <h3>Lead App Developer (Android | Flutter)</h3>
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                             <td>
-                                                                    <h5>January 2019 - April 2019 (4 Months)</h5>
+                                                                    <h5>January 2019 - May 2019 (5 Months)</h5>
                                                             </td>
                                                         </tr>
                                                     <tr>
