--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <div class="banner-info">
                                     <h1>Hello, I am</h1>
                                     <h2>Sandip Savaliya</h2>
-                                    <h3>Android Developer</h3>
+                                    <h3>CTO | SPEAKER</h3>
                                 </div>
                             </div>
                         </div>
@@ -106,7 +106,7 @@
                         <div class="col-sm-8">
                             <div class="about-info">
                                 <h4>Know Me</h4>
-                                <p>I am an Android Developer with huge IT encounter, Programming skills(Data-Structures & Algorithms), Analytical & Innovative critical thinking and capacity to apply client benefit ideas to IT to enhance the user experience for clients and organization.</p>
+                                <p>A person with huge IT encounter, Programming skills(Data-Structures & Algorithms), Analytical & Innovative critical thinking and capacity to apply client benefit ideas to IT to enhance the user experience for clients.</p>
                             </div>
                             <div class="personal-info">
                                 <div class="sub-content">
@@ -182,7 +182,7 @@
                                         <span class="rating-count pull-right">70%</span>
                                         <div class="skill-progress">
                                             <div class="progress">
-                                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                                <div class="progress-bar bar6" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
                                                 </div>
                                             </div>
                                         </div>
