--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Sandip Savaliya">
-        <meta name="description" content="A portfolio of an Accomplished and recommended Android Developer.">
+        <meta name="description" content="Freelancer app developer, website developer, desktop software developer, tech enthusistic & gdg speaker.">
 
         <title>Sandip Savaliya</title>
         
