--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <div class="banner-info">
                                     <h1>Hello, I am</h1>
                                     <h2>Sandip Savaliya</h2>
-                                    <h3>CTO | SPEAKER</h3>
+                                    <h3>GDG SPEAKER | CTO</h3>
                                 </div>
                             </div>
                         </div>
