--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                             </div>
                             <div class="exprience">
                                 <div class="exprience-image">
-                                <img style="padding-left:30px; padding-top:20px;" class="img-responsive" src="nestcode.png" alt="Image">
+                                <img style="padding-left:30px; padding-top:20px;" class="img-responsive" src="whitelion.png" alt="Image">
                                 </div>
                                 <table class="exprience-info">
                                         <tr>
