--- a/index.html
+++ b/index.html
@@ -118,11 +118,10 @@
                                         <li><h5>Locality </h5> <span>:</span>India</li> 
                                         <hr>
                                         <li><h4>Portfolio</h4></li>
-                                        <li><h5>Fiverr </h5> <span>:</span><a href="https://www.fiverr.com/sandipsavaliya" target="blank">https://www.fiverr.com/sandipsavaliya</a></li> 
-                                        <li><h5>GitHub </h5> <span>:</span><a href="https://github.com/blackbeared">https://github.com/blackbeared</a></li> 
-                                        <li><h5>Stack-Overflow </h5> <span>:</span><a href="https://stackoverflow.com/users/8144663/sandip-savaliya">https://stackoverflow.com/users/8144663/sandip-savaliya</a></li> 
-                                        <li><h5>LinkedIn </h5> <span>:</span><a href="https://www.linkedin.com/in/er-sandip-savaliya/">https://www.linkedin.com/in/er-sandip-savaliya/</a></li>
-                                        <li><h5>Medium </h5> <span>:</span><a href="https://medium.com/@sandipsavaliya">https://medium.com/@sandipsavaliya</a></li>
+                                        <li><h5>GitHub </h5> <span>:</span><a href="https://github.com/panchalamitr">https://github.com/panchalamitr</a></li> 
+                                        <li><h5>Stack-Overflow </h5> <span>:</span><a href="https://stackoverflow.com/users/938845/panchal-amit">https://stackoverflow.com/users/938845/panchal-amit</a></li> 
+                                        <li><h5>LinkedIn </h5> <span>:</span><a href="https://www.linkedin.com/in/er-sandip-savaliya/">https://www.linkedin.com/in/amit-panchal-6423751b0/</a></li>
+                                        <li><h5>Medium </h5> <span>:</span><a href="https://panchalamitr0.medium.com/">https://panchalamitr0.medium.com/</a></li>
                                     </ul>
                                 </div>
                                     <hr>
@@ -775,7 +774,7 @@ smartphones and tablets.
                 var subject= document.getElementById("csubject").value;
                 var message= document.getElementById("cmessage").value;
 
-                window.location.href = "mailto:sandipsavaliya112@gmail.com?subject="+subject+"&body=Hey Mate, My name is "+name+", I have contacted you from your portfolio. I have contacted you to discuss you with the following. \n\n"+message+"\n. You can contact me on the email : "+email ;
+                window.location.href = "mailto:panchalamitr0@gmail.com?subject="+subject+"&body=Hey Mate, My name is "+name+", I have contacted you from your portfolio. I have contacted you to discuss you with the following. \n\n"+message+"\n. You can contact me on the email : "+email ;
             }
 
         </script>
