--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body>
         <div class="main-wrapper home-two">
             <div id="home-banner">
-                <img class="cover" src = "ug.png" width= 410px>
+                <img class="cover" src = "up.png" width= 410px>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-9">
@@ -47,9 +47,9 @@
                                         <li><a href="https://www.facebook.com/SandipSavaliyaOfficial"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                         <li><a href="https://www.instagram.com/officialsandippatel/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                         <li><a href="https://twitter.com/Sandip7747"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="https://www.linkedin.com/in/er-sandip-savaliya/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                        <li><a href="https://github.com/blackbeared"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
-                                        <li><a href="https://stackoverflow.com/users/8144663/sandip-savaliya"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/amit-panchal-6423751b0/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://github.com/panchalamitr"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://stackoverflow.com/users/938845/panchal-amit"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a></li>
                                     </ul>                                    
                                 </div>
                                 <div class="banner-info">
@@ -120,7 +120,7 @@
                                         <li><h4>Portfolio</h4></li>
                                         <li><h5>GitHub </h5> <span>:</span><a href="https://github.com/panchalamitr">https://github.com/panchalamitr</a></li> 
                                         <li><h5>Stack-Overflow </h5> <span>:</span><a href="https://stackoverflow.com/users/938845/panchal-amit">https://stackoverflow.com/users/938845/panchal-amit</a></li> 
-                                        <li><h5>LinkedIn </h5> <span>:</span><a href="https://www.linkedin.com/in/er-sandip-savaliya/">https://www.linkedin.com/in/amit-panchal-6423751b0/</a></li>
+                                        <li><h5>LinkedIn </h5> <span>:</span><a href="https://www.linkedin.com/in/amit-panchal-6423751b0/">https://www.linkedin.com/in/amit-panchal-6423751b0/</a></li>
                                         <li><h5>Medium </h5> <span>:</span><a href="https://panchalamitr0.medium.com/">https://panchalamitr0.medium.com/</a></li>
                                     </ul>
                                 </div>
@@ -280,7 +280,7 @@
                             </div>
                             <div class="exprience">
                                 <div class="exprience-image">
-                                <img style="padding-left:30px; padding-top:20px;" class="img-responsive" src="whitelion.png" alt="Image">
+                                <img style="padding-left:30px; padding-top:20px;" class="img-responsive" src="ohanae.png" alt="Image">
                                 </div>
                                 <table class="exprience-info">
                                         <tr>
@@ -321,7 +321,7 @@ roadmap.
                             <hr>
                             <div class="exprience">
                                     <div class="exprience-image">
-                                    <img style="padding-left:30px; padding-top:20px;" class="img-responsive" src="coruscate.png" alt="Image">
+                                    <img style="padding-left:30px; padding-top:20px;" class="img-responsive" src="infostretch.png" alt="Image">
                                     </div>
                                     <table class="exprience-info">
                                             <tr>
@@ -371,7 +371,7 @@ ordinary class with custom class for automation.
                             <hr>
                             <div class="exprience">
                                 <div class="exprience-image">
-                                <img style="padding-left:30px; padding-top:20px;" class="img-responsive" src="nestcode.png" alt="Image">
+                                <img style="padding-left:30px; padding-top:20px;" class="img-responsive" src="webyug.png" alt="Image">
                                 </div>
                                 <table class="exprience-info">
                                         <tr>
@@ -412,7 +412,7 @@ technologies.
                             <hr>
                             <div class="exprience">
                                 <div class="exprience-image">
-                                    <img style="padding-left:10px; padding-top:30px;"  class="img-responsive" src="infinity.png" alt="Image">
+                                    <img style="padding-left:10px; padding-top:30px;"  class="img-responsive" src="drcsystem.png" alt="Image">
                                 </div>
                                 <table class="exprience-info">
                                         <tr>
@@ -459,7 +459,7 @@ for in-house product.
                             <hr>
 							<div class="exprience">
                                 <div class="exprience-image">
-                                    <img style="padding-left:10px; padding-top:30px;"  class="img-responsive" src="infinity.png" alt="Image">
+                                    <img style="padding-left:10px; padding-top:30px;"  class="img-responsive" src="igeniusdev.png" alt="Image">
                                 </div>
                                 <table class="exprience-info">
                                         <tr>
