Update Markup links

--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
                         </div>
                         <div class="col-sm-8">
                             <div class="about-info">
-                                <h4>Know Me</h4>
-                                <p>A person with huge IT encounter, Programming skills(Data-Structures & Algorithms), Analytical & Innovative critical thinking and capacity to apply client benefit ideas to IT to enhance the user experience for clients.</p>
+                                <h4>Profile</h4>
+                                <p>- 8+ years of experience in area of Mobile App Development.</br>- Solid understanding of full mobile and software development life cycles, UIX, web analytics, and Agile
+methodologies.</br>- Deep understanding & passion for full stack application development including Mobile apps, API Design
+& Cloud infrastructure.</p>
                             </div>
                             <div class="personal-info">
                                 <div class="sub-content">
@@ -118,10 +120,10 @@
                                         <li><h5>Locality </h5> <span>:</span>India</li> 
                                         <hr>
                                         <li><h4>Portfolio</h4></li>
-                                        <li><h5>GitHub </h5> <span>:</span><a href="https://github.com/panchalamitr">https://github.com/panchalamitr</a></li> 
-                                        <li><h5>Stack-Overflow </h5> <span>:</span><a href="https://stackoverflow.com/users/938845/panchal-amit">https://stackoverflow.com/users/938845/panchal-amit</a></li> 
-                                        <li><h5>LinkedIn </h5> <span>:</span><a href="https://www.linkedin.com/in/amit-panchal-6423751b0/">https://www.linkedin.com/in/amit-panchal-6423751b0/</a></li>
-                                        <li><h5>Medium </h5> <span>:</span><a href="https://panchalamitr0.medium.com/">https://panchalamitr0.medium.com/</a></li>
+                                        <li><h5>GitHub </h5> <span>:</span><a href="https://github.com/panchalamitr" target="_blank">https://github.com/panchalamitr</a></li> 
+                                        <li><h5>Stack-Overflow </h5> <span>:</span><a href="https://stackoverflow.com/users/938845/panchal-amit" target="_blank">https://stackoverflow.com/users/938845/panchal-amit</a></li> 
+                                        <li><h5>LinkedIn </h5> <span>:</span><a href="https://www.linkedin.com/in/amit-panchal-6423751b0/" target="_blank">https://www.linkedin.com/in/amit-panchal-6423751b0/</a></li>
+                                        <li><h5>Medium </h5> <span>:</span><a href="https://panchalamitr0.medium.com/" target="_blank">https://panchalamitr0.medium.com/</a></li>
                                     </ul>
                                 </div>
                                     <hr>
@@ -160,16 +162,23 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="section-title">
-                                <h1>My Skills</h1>
+                                <h1>Highlight</h1>
                             </div>                            
                         </div>
                         <div class="col-sm-8">
                             <div class="section-content">
                                 <div class="text-info">
                                     <h4>Experience Skill</h4>
-                                    <p>I am an Experienced Developer with huge IT encounter, programming skills, analytical thinking, innovative
-                                    critical thinking & capacity to apply client benefit ideas to IT to enhance user experience for clients and
-                                    organization.
+                                    <p>
+- Built a hobby project: <b>APK Decompiler</b> web app using Node.js running on RaspberryPi and made it accessible via dynamic DNS using NoIP.</br>
+- Built my own Android App:  <a href = "https://play.google.com/store/apps/details?id=com.lstViewTest target="_blank""><b>Koza - English Gujarati Dictionary</b></a>, 4.7+ rating with more than 150k
+monthly active users with about million downloads.</br>
+- Worked on <a href = "https://play.google.com/store/apps/details?id=com.lifescan.reveal" target="_blank"><b>OneTouch Reveal</b></a>, the health care related app which is downloaded more than 1 million times.
+- I’m active on <a href = "https://stackoverflow.com/users/938845/panchal-amit" target="_blank"><b>StackOverflow</b></a> with more than 12k reputation.</br>
+- Awarded multiple exclusive developer devices running different OS from Nokia, Blackberry.</br>
+- Worked on various Arduino hobby projects like <a href = "https://youtu.be/tf0vkRUlRms"  target="_blank"><b>Smart SwitchBoard (Controlled by Alexa & Google
+Home, Wear OS and Android OS), Door Monitoring System</b></a> and Self Cleaning Toilet and Auto Tap Water
+system.</b>
                                     </p>
                                 </div>
                                 <div class="progress-content">
@@ -599,10 +608,10 @@ smartphones and tablets.
                                             </div>
                                             <h3>Social profiles</h3>
                                             <ul class="social list-inline">
-                                                    <li><a href="https://twitter.com/PanchalAmitR"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                                    <li><a href="https://www.linkedin.com/in/amit-panchal-6423751b0/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                                    <li><a href="https://github.com/panchalamitr"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
-                                                    <li><a href="https://stackoverflow.com/users/938845/panchal-amit"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a></li>
+                                                    <li><a href="https://twitter.com/PanchalAmitR" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                                    <li><a href="https://www.linkedin.com/in/amit-panchal-6423751b0/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                                    <li><a href="https://github.com/panchalamitr" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
+                                                    <li><a href="https://stackoverflow.com/users/938845/panchal-amit" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a></li>
                                             </ul> 
                                         </li>
                                     </ul>                            
