--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                             <div class="banner-content">
                                 <div class="home-social">
                                     <ul class="list-inline">
-                                        <li><a href="https://www.facebook.com/SandipSavaliyaOfficial"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="https://www.instagram.com/officialsandippatel/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                        <li><a href="https://twitter.com/Sandip7747"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://www.facebook.com/panchalamitr"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://www.instagram.com/panchalamitr"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://twitter.com/PanchalAmitR"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                                         <li><a href="https://www.linkedin.com/in/amit-panchal-6423751b0/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                                         <li><a href="https://github.com/panchalamitr"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
                                         <li><a href="https://stackoverflow.com/users/938845/panchal-amit"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a></li>
@@ -105,7 +105,7 @@
                         <div class="col-sm-8">
                             <div class="about-info">
                                 <h4>Profile</h4>
-                                <p>- 8+ years of experience in area of Mobile App Development.</br>- Solid understanding of full mobile and software development life cycles, UIX, web analytics, and Agile
+                                <p>- 9 years of experience in area of Mobile App Development.</br>- Solid understanding of full mobile and software development life cycles, UIX, web analytics, and Agile
 methodologies.</br>- Deep understanding & passion for full stack application development including Mobile apps, API Design
 & Cloud infrastructure.</p>
                             </div>
